Added methods to get various properties

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,18 +2,24 @@
 
 export(adjust_brightness)
 export(adjust_saturation)
+export(blue)
+export(brightness)
 export(colRGB)
 export(darken)
 export(desaturate)
 export(grayscale)
+export(green)
 export(greyscale)
+export(hue)
 export(invert)
 export(is.color)
 export(is.hex.color)
 export(is.named.color)
 export(lighten)
 export(mix)
+export(red)
 export(saturate)
+export(saturation)
 export(shade)
 export(tint)
 importFrom(assertthat,assert_that)
