HSL/HSV Updates
- Added preliminary support for HSL
- Added lightness() function to get a color's lightness in HSL
- Added colHLS and colHSV to create HSL and HSV objects from hex/named
  colors
  - Using these functions to get most property values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(adjust_rgb)
 export(adjust_saturation)
 export(blue)
 export(brightness)
+export(colHLS)
+export(colHSV)
 export(colRGB)
 export(complement)
 export(darken)
@@ -22,6 +24,7 @@ export(is.color)
 export(is.hex.color)
 export(is.named.color)
 export(lighten)
+export(lightness)
 export(mix)
 export(red)
 export(saturate)
@@ -31,7 +34,9 @@ export(tint)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,is.string)
 importFrom(assertthat,on_failure)
+importFrom(colorspace,HLS)
 importFrom(colorspace,HSV)
+importFrom(colorspace,RGB)
 importFrom(colorspace,coords)
 importFrom(colorspace,hex)
 importFrom(colorspace,hex2RGB)
