--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(adjust_blue)
 export(adjust_brightness)
 export(adjust_green)
+export(adjust_hsv)
 export(adjust_hue)
 export(adjust_red)
 export(adjust_rgb)
@@ -10,6 +11,7 @@ export(adjust_saturation)
 export(blue)
 export(brightness)
 export(colHLS)
+export(colHSL)
 export(colHSV)
 export(colRGB)
 export(complement)
@@ -18,6 +20,7 @@ export(desaturate)
 export(grayscale)
 export(green)
 export(greyscale)
+export(hex)
 export(hue)
 export(invert)
 export(is.color)
@@ -31,8 +34,8 @@ export(saturate)
 export(saturation)
 export(shade)
 export(tint)
+importFrom(assertthat,are_equal)
 importFrom(assertthat,assert_that)
-importFrom(assertthat,is.string)
 importFrom(assertthat,on_failure)
 importFrom(colorspace,HLS)
 importFrom(colorspace,HSV)
