--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,9 @@
 
 export(adjust_blue)
 export(adjust_green)
+export(adjust_hls)
+export(adjust_hsl)
 export(adjust_hsv)
-export(adjust_hue)
 export(adjust_red)
 export(adjust_rgb)
 export(blue)
@@ -13,12 +14,11 @@ export(colHSL)
 export(colHSV)
 export(colRGB)
 export(complement)
-export(complement_HSV)
 export(darken)
-export(desaturate_HSV)
-export(grayscale_HSV)
+export(desaturate)
+export(grayscale)
 export(green)
-export(greyscale_HSV)
+export(greyscale)
 export(hex)
 export(hue)
 export(invert)
@@ -29,7 +29,7 @@ export(lighten)
 export(lightness)
 export(mix)
 export(red)
-export(saturate_HSV)
+export(saturate)
 export(saturation)
 export(shade)
 export(tint)
