--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(hex)
 export(hue)
 export(invert)
 export(is.color)
+export(is.colorspace)
 export(is.hex.color)
 export(is.named.color)
 export(lighten)
