Lots of updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(shade)
 export(tint)
 importFrom(assertthat,are_equal)
 importFrom(assertthat,assert_that)
+importFrom(assertthat,is.flag)
 importFrom(assertthat,on_failure)
 importFrom(colorspace,HLS)
 importFrom(colorspace,HSV)
