--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,14 +12,13 @@ export(brightness)
 export(colHLS)
 export(colHSL)
 export(colHSV)
-export(colRGB)
 export(complement)
+export(coordinates)
 export(darken)
 export(desaturate)
 export(grayscale)
 export(green)
 export(greyscale)
-export(hex)
 export(hue)
 export(invert)
 export(is.color)
@@ -43,7 +42,6 @@ importFrom(colorspace,HSV)
 importFrom(colorspace,RGB)
 importFrom(colorspace,coords)
 importFrom(colorspace,hex)
-importFrom(colorspace,hex2RGB)
 importFrom(colorspace,mixcolor)
 importFrom(colorspace,sRGB)
 importFrom(grDevices,col2rgb)
