--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,7 @@ export(adjust_red)
 export(adjust_rgb)
 export(blue)
 export(brightness)
-export(colHLS)
-export(colHSL)
-export(colHSV)
+export(colorproperty)
 export(complement)
 export(coordinates)
 export(darken)
