--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(desaturate)
 export(grayscale)
 export(green)
 export(greyscale)
+export(hex)
 export(hue)
 export(invert)
 export(is.color)
