--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,10 @@ export(adjust_hue)
 export(adjust_red)
 export(adjust_rgb)
 export(adjust_saturation)
+export(alpha)
 export(blue)
 export(brightness)
-export(colorproperty)
+export(col2hsv)
 export(complement)
 export(darken)
 export(desaturate)
@@ -18,6 +19,8 @@ export(grayscale)
 export(green)
 export(greyscale)
 export(hex)
+export(hsv2col)
+export(hsv2rgb)
 export(hue)
 export(invert)
 export(is.color)
@@ -26,6 +29,7 @@ export(is.named.color)
 export(lighten)
 export(mix)
 export(red)
+export(rgb2hex)
 export(saturate)
 export(saturation)
 export(shade)
