More rearranging, updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,7 @@ export(grayscale)
 export(green)
 export(greyscale)
 export(hex)
-export(hsv2col)
+export(hsv2hex)
 export(hsv2rgb)
 export(hue)
 export(invert)
