Added transparency functions
ci skip

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,11 +22,13 @@ export(is.color)
 export(is.hex.color)
 export(is.named.color)
 export(mix)
+export(opacify)
 export(red)
 export(rgb2hex)
 export(saturate)
 export(saturation)
 export(shade)
 export(tint)
+export(transparentize)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,on_failure)
